--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/face_detection": "^0.4.1646425229",
+    "face-api.js": "^0.22.2",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
